[project]
name = "temporal-bench"
version = "1.0.0"
description = "Temporal reasoning evaluation environment for LLMs"
authors = [
    {name = "Tarun Nagarajan", email = "tarun.greenville@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "verifiers>=0.2.0",
    "datasets>=2.19.0",
    "openai>=1.23.0",
    "anthropic>=0.21.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["evaluate.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]