[project]
name = "temporal-bench"
version = "0.1.0"
description = "TRAM (Temporal Reasoning About Events) dataset evaluation environment for temporal reasoning tasks."
tags = ["eval", "reasoning", "single-turn", "temporal", "temporal-bench"]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.7",
    "datasets>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["temporal_bench.py"]